// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserMenu /> should render properly 1`] = `
.emotion-0 {
  margin-right: -12px;
}

.emotion-1 {
  position: relative;
  height: 100%;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #73b61c;
  background-color: transparent;
  padding-left: 16px;
  height: 100%;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus,
.emotion-2 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #3b3b3b;
}

.emotion-2:hover {
  cursor: pointer;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0;
  padding: 0;
  width: 28px;
  height: 28px;
  border-radius: 28px;
  color: #252525;
  background-color: #808080;
  font-weight: 700;
}

.emotion-5 {
  margin-left: 8px;
  -webkit-transform: ;
  -moz-transform: ;
  -ms-transform: ;
  transform: ;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <button
      aria-label="Open user menu"
      className="emotion-2"
      onBlur={[Function]}
      onClick={[Function]}
      type="button"
    >
      <div
        className="emotion-3"
      >
        <div
          className="emotion-4"
        >
          JD
        </div>
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="chevron.svg"
          height={20}
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`<UserMenu /> should render properly 2`] = `
.emotion-0 {
  margin-right: -12px;
}

.emotion-1 {
  position: relative;
  height: 100%;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #73b61c;
  background-color: #3b3b3b;
  padding-left: 16px;
  height: 100%;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus,
.emotion-2 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #3b3b3b;
}

.emotion-2:hover {
  cursor: pointer;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0;
  padding: 0;
  width: 28px;
  height: 28px;
  border-radius: 28px;
  color: #ffffff;
  background-color: #252525;
  font-weight: 700;
}

.emotion-5 {
  margin-left: 8px;
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-6 {
  position: absolute;
  z-index: 1;
  top: 100%;
  right: 0;
  background-color: #808080;
  border-radius: 2px;
  box-shadow: 0 4px 7px 0 #000000;
  min-width: 200px;
  font-family: Roboto,Avenir,"sans-serif";
}

.emotion-6 ul {
  list-style-type: none;
  padding: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  margin: 0;
}

.emotion-6 li {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  padding: 16px;
  border-bottom: 1px solid #b3b3b3;
}

.emotion-8 {
  font-weight: 700;
}

.emotion-9 {
  border-bottom: 1px solid #b3b3b3;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-10:hover,
.emotion-10.focus-visible:focus,
.emotion-10 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #4a4a4a;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <button
      aria-label="Open user menu"
      className="emotion-2"
      onBlur={[Function]}
      onClick={[Function]}
      type="button"
    >
      <div
        className="emotion-3"
      >
        <div
          className="emotion-4"
        >
          JD
        </div>
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="chevron.svg"
          height={20}
        />
      </div>
    </button>
    <div
      className="emotion-6"
    >
      <div>
        <div
          className="emotion-7"
        >
          <div
            className="emotion-8"
          >
            Jane Doe
          </div>
          <div>
            jane.doe@zorroa.com
          </div>
        </div>
        <ul
          className="emotion-9"
        >
          <li>
            <a
              className="emotion-10"
              href="/account"
              onBlur={[Function]}
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Manage Account
            </a>
          </li>
          <li>
            <a
              className="emotion-10"
              href="mailto:zvi-console-support@zorroa.com"
              onBlur={[Function]}
              onClick={[Function]}
              rel="noopener noreferrer"
              target="_blank"
            >
              Contact Support
            </a>
          </li>
          <li>
            <a
              className="emotion-10"
              href="https://shipright.community/zorroa"
              onBlur={[Function]}
              onClick={[Function]}
              rel="noopener noreferrer"
              target="_blank"
            >
              Submit Feedback
            </a>
          </li>
        </ul>
        <ul>
          <li>
            <button
              className="emotion-10"
              onBlur={[Function]}
              onClick={[Function]}
              type="button"
            >
              Sign Out
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`<UserMenu /> should render properly without firstName/lastName 1`] = `
.emotion-0 {
  margin-right: -12px;
}

.emotion-1 {
  position: relative;
  height: 100%;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #73b61c;
  background-color: transparent;
  padding-left: 16px;
  height: 100%;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus,
.emotion-2 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #3b3b3b;
}

.emotion-2:hover {
  cursor: pointer;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0;
  padding: 0;
  width: 28px;
  height: 28px;
  border-radius: 28px;
  color: #252525;
  background-color: #808080;
  font-weight: 700;
}

.emotion-5 {
  margin-left: 8px;
  -webkit-transform: ;
  -moz-transform: ;
  -ms-transform: ;
  transform: ;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <button
      aria-label="Open user menu"
      className="emotion-2"
      onBlur={[Function]}
      onClick={[Function]}
      type="button"
    >
      <div
        className="emotion-3"
      >
        <div
          className="emotion-4"
        >
          
        </div>
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="chevron.svg"
          height={20}
        />
      </div>
    </button>
  </div>
</div>
`;
